# device_board_unionman

./: .gitignore  LICENSE  OAT.xml  README.en.md  README.md  README_zh.md
a311d/: BUILD.gn  README_zh.md  device.gni  ohos.build
a311d/audio_drivers/dai/: a311d_dai_ops.c  a311d_dai_ops.h
a311d/audio_drivers/dsp/: a311d_dsp_ops.c
a311d/audio_drivers/soc/: a311d_dma_ops.c
a311d/bluetooth/firmware/: rtkbt.conf
a311d/camera/: BUILD.gn
a311d/camera/device_manager/: BUILD.gn
a311d/camera/driver_adapter/: BUILD.gn
a311d/camera/pipeline_core/: BUILD.gn
a311d/cfg/: BUILD.gn  ramdisk_resource_config.ini  sdcard_mount.sh
a311d/common/: BUILD.gn
a311d/common/distributedhardware/: BUILD.gn
a311d/common/tools/: packer-unionpi.sh
a311d/hardware/bt/: BUILD.gn
a311d/kernel/: BUILD.gn  build_kernel.sh  kernel.mk  logo.ppm  patch_hdf.sh
a311d/loader/: README_zh.md
a311d/prebuilts/: README_zh.md
a311d/system/: BUILD.gn  init.A311D.cfg  init.A311D.sh
a311d/tools/: packer-unionpi.sh
a311d/updater/: BUILD.gn
a311d/wifi/: Kconfig  Makefile
docs/: 源码编译.md  环境搭建.md  编写helloworld.md  获取源码.md  运行镜像.md  镜像烧录.md
unionpi_tiger/: BUILD.gn  README_zh.md  device.gni  ohos.build
unionpi_tiger/bootanimation/: BUILD.gn
unionpi_tiger/bootloader/: README_zh.md
unionpi_tiger/cfg/: udisk_mount.sh
unionpi_tiger/common/: BUILD.gn
unionpi_tiger/config/: BUILD.gn  fstab.A311D  ramdisk_resource_config.ini
unionpi_tiger/hardware/: BUILD.gn
unionpi_tiger/hardware/camera/driver_adapter/: BUILD.gn
unionpi_tiger/hardware/camera/driver_adapter/include/: v4l2_dev.h  v4l2_fileformat.h  v4l2_stream.h  v4l2_temp.h
unionpi_tiger/hardware/camera/driver_adapter/src/: v4l2_buffer.cpp  v4l2_dev.cpp  v4l2_fileformat.cpp  v4l2_stream.cpp
unionpi_tiger/hardware/camera/driver_adapter/test/: BUILD.gn
unionpi_tiger/hardware/camera/driver_adapter/test/v4l2_test/: BUILD.gn
unionpi_tiger/kernel/: BUILD.gn
unionpi_tiger/loader/: README_zh.md
unionpi_tiger/resource/: BUILD.gn
unionpi_tiger/updater/: BUILD.gn  fstab.updater
(+207 files in other folders)
