# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.
import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//drivers/peripheral/camera/hal/camera.gni")

config("v4l2_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-error",
    "-DGST_DISABLE_DEPRECATED",
    "-DHAVE_CONFIG_H",
    "-DCOLORSPACE=\"videoconvert\"",
    "-fno-strict-aliasing",
    "-Wno-sign-compare",
    "-Wno-builtin-requires-header",
    "-Wno-unused-variable",
    "-Wno-unused-label",
    "-Wno-implicit-function-declaration",
    "-Wno-format",
    "-Wno-int-conversion",
    "-Wno-unused-function",
    "-Wno-thread-safety-attributes",
    "-Wno-inconsistent-missing-override",
    "-fno-rtti",
    "-fno-exceptions",
    "-ffunction-sections",
    "-fdata-sections",
  ]

  if (enable_camera_device_utest) {
    cflags += [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]

    ldflags = [ "--coverage" ]
  }
}

ohos_shared_library("camera_v4l2_adapter") {
  sources = [
    "src/v4l2_buffer.cpp",
    "src/v4l2_control.cpp",
    "src/v4l2_dev.cpp",
    "src/v4l2_fileformat.cpp",
    "src/v4l2_stream.cpp",
    "src/v4l2_uvc.cpp",
  ]

  include_dirs = [
    "$camera_path/include",
    "include",
    "//foundation/multimedia/camera_standard/frameworks/native/metadata/include",
    "//drivers/peripheral/camera/interfaces/metadata/include",
    "//device/soc/amlogic/a311d/hardware/ge2d/include",
  ]

  if (is_standard_system) {
    external_deps = [
      "hdf_core:libhdf_utils",
      "hiviewdfx_hilog_native:libhilog",
      "utils_base:utils",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  
  public_deps = [
    "//device/soc/amlogic/a311d/hardware/ge2d:libge2d",
  ]

  public_configs = [ ":v4l2_config" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "camera_device_driver"
}
